--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,8 +1,27 @@
+@font-face {
+  font-family: 'Noto Sans JP';
+  src: url('../../public/fonts/NotoSansJP-Regular.ttf') format('ttf');
+  font-weight: 400;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Noto Sans JP';
+  src: url('../../public/fonts/NotoSansJP-Medium.ttf') format('ttf');
+  font-weight: 500;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Noto Sans JP';
+  src: url('../../public/fonts/NotoSansJP-Bold.ttf') format('ttf');
+  font-weight: 700;
+  font-display: swap;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Noto Sans JP', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
