--- a/frontend/src/components/ui/WeatherIcon.css
+++ b/frontend/src/components/ui/WeatherIcon.css
@@ -27,6 +27,10 @@
     font-size: 18px;
 }
 
+.weather-icon.xlarge {
+    font-size: 22px;
+}
+
 .weather-emoji {
     font-size: 1.1em;
     line-height: 1;
@@ -56,6 +60,10 @@
 
     .weather-icon.large {
         font-size: 16px;
+    }
+
+    .weather-icon.xlarge {
+        font-size: 20px;
     }
 }
 
