--- a/frontend/src/components/ui/WeatherIcon.css
+++ b/frontend/src/components/ui/WeatherIcon.css
@@ -35,6 +35,10 @@
     font-size: 1.1em;
     line-height: 1;
     display: inline-block;
+    text-shadow: 
+        0px 0px 1px rgba(0, 0, 0, 0.8),
+        0px 0px 2px rgba(0, 0, 0, 0.6),
+        1px 1px 2px rgba(0, 0, 0, 0.4);
 }
 
 .temperature {
